# DS_transfer_mouse

./: LICENSE_bundled.txt  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
nbs/00_setup/.ipynb_checkpoints/: tasks-checkpoint.py
nbs/00_setup/archs_mouse_data/: retrieve_metadata_archs4_mouse_blood.py  retrieve_metadata_archs4_mouse_blood.sh
nbs/00_setup/mice_data/: 03-standardize-gene_expr_data.ipynb  03-standardize-gene_expr_data.run.ipynb  03-standardize-gene_expr_data_facial_mesenchyme.ipynb  03-standardize-gene_expr_data_lymph_nodes.ipynb  03-standardize-gene_expr_data_norm_adult_heart.ipynb  03-standardize-gene_expr_data_normal_brain.ipynb  utils.py
nbs/10_vae/: read_plier_rds_file.ipynb  results_micedata.ipynb  results_out_of_sample_mice_data.ipynb
nbs/10_vae/.ipynb_checkpoints/: 01-train-vae-micedata-checkpoint.ipynb  read_plier_rds_file-checkpoint.ipynb  results_micedata-checkpoint.ipynb  results_out_of_sample_mice_data-checkpoint.ipynb  tasks-checkpoint.py
nbs/10_vae/py/: 01-train-vae-micedata.py  read_plier_rds_file.R  results_micedata.py  results_out_of_sample_mice_data.py
setup/.ipynb_checkpoints/: install-checkpoint.sh
setup/envs/: r-deps-bioconductor.r
setup/envs/.ipynb_checkpoints/: environment-checkpoint.yml
src/download/: download_archs4_mouse_blood.R
src/linear_signal/.ipynb_checkpoints/: utils-checkpoint.py
src/pvae/: data.py  utils.py
src/pvae.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pvae/.ipynb_checkpoints/: models-checkpoint.py  (+1 more)
src/shell_scripts/: download_archs4_mouse_blood.sh
(+22 files in other folders)
